--- a/practice_type.html
+++ b/practice_type.html
@@ -110,18 +110,44 @@
     </form>
 <p>
     <form>
-      Select a week:
+      Select a week:  # 주와 연도를 선택할 수 있다
       <input type="week" name="week_year">
     </form>
 <p>
     <form>
-      Select a time:
+      Select a time: # time picker 로 입력 필드 표시된다
       <input type="time" name="usr_time">
     </form>
 <p>
-
-
-
+    <form>
+      Birthday (date and time):  # 왜 그냥 텍스트박스처럼 보이는지 몰르겠땨
+      <input type="datetime" name="bdaytime">
+    </form>
+<p>
+    <form>
+      Birthday (date and time):
+      <input type="datetime-local" name="bdaytime">
+    </form>
+<p>
+    <form>
+      E-mail:
+      <input type="email" name="email">
+    </form>
+<p>
+    <form>
+      Search Google:  #일반 텍스트 필드처럼 동작된다.
+      <input type="search" name="googlesearch">
+    </form>
+<p>
+    <form>
+      Telephone:  #일반 텍스트 필드처럼 출력되넹
+      <input type="tel" name="usrtel">
+    </form>
+<p>
+    <form>
+      Add your homepage: # 브라우저의 지원에 따라서, 폼이 제출 될 때 URL 필드의 값이 자동으로 유효성 검사가 될 수 있습니다.
+      <input type="url" name="homepage">
+    </form>
 
 
   </body>
