--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
+    <li><a href="1.html" style="color:yellow;text-decoration:underline">HTML</a></li>
     <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
