--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+  <style>
+  a {
+    color:black;
+  }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="1.html" style="color:yellow;text-decoration:underline">HTML</a></li>
+    <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>엘리나가 만든 WEB</h2>
