--- a/index.html
+++ b/index.html
@@ -5,19 +5,40 @@
   <meta charset="utf-8">
   <style>
   a {
-    color:black;
+    font-size: 30px;
+    font-weight: bold;
+    color: #ffffff;
+  }
+  h1 {
+    font-size:50px;
+    text-align:center;
+    text-shadow: 2px 2px 2px gray;
+  }
+  li {
+    font-size:30px;
+    text-align:left;
+    text-shadow: 2px 2px 2px gray;
   }
   </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html" style="color:yellow;text-decoration:underline">HTML</a></li>
-    <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html" style="color:yellow;">HTML</a></li>
+    <li><a href="2.html" style="color:red;">CSS</a></li>
+    <li><a href="3.html" style="color:blue;">JavaScript</a></li>
   </ol>
   <h2>엘리나가 만든 WEB</h2>
-  <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+  <p>The World Wide Web (abbreviated WWW or the Web) is
+    an information space where documents and
+    other web resources are identified by Uniform Resource Locators (URLs),
+    interlinked by hypertext links, and can be accessed via the Internet.
+    [1] English scientist Tim Berners-Lee invented the World Wide Web in 1989.
+    He wrote the first web browser computer program in 1990
+    while employed at CERN in Switzerland.[2][3]
+    The Web browser was released outside of CERN in 1991,
+    first to other research institutions starting in January 1991 and
+    to the general public on the Internet in August 1991.
   </p>
 </body>
 </html>
