--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
   <style>
-  a {
-    font-size: 30px;
-    font-weight: bold;
-    color: #ffffff;
-  }
   h1 {
     font-size:50px;
     text-align:center;
     text-shadow: 2px 2px 2px gray;
+    color: #ffffff;
   }
+  a {
+    font-size: 30px;
+    font-weight: bold;
+    color: #ffff00;
+  }
+
   li {
     font-size:30px;
     text-align:left;
@@ -22,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">WssEB</a></h1>
   <ol>
     <li><a href="1.html" style="color:yellow;">HTML</a></li>
     <li><a href="2.html" style="color:red;">CSS</a></li>
