--- a/table.html
+++ b/table.html
@@ -7,18 +7,21 @@
     <table border="2">
       <thead>
         <tr>
-        <<th>이름</th> <th>성별</th> <th>나이</th>  
+        <<th>이름</th> <th>성별</th> <th>나이</th> <th>용돈</th>
         </tr>
       </thead>
 
       <tbody>
         <tr>
-        <td>박윤정</td> <td>여자</td> <td>30</td>
+        <td>박윤정</td> <td>여자</td> <td>30</td> <td>50000</td>
       </tr>
       <tr>
-        <td>이후민</td> <td>남자</td> <td>29</td>
+        <td>이후민</td> <td>남자</td> <td>29</td> <td>100000</td>
       </tr>
       </tbody>
+      <tfoot>
+        <td>합계</td> <td></td> <td></td> <td>150000</td>
+      </tfoot>
     </table>
   </body>
 </html>
