--- a/table.html
+++ b/table.html
@@ -13,14 +13,14 @@
 
       <tbody>
         <tr>
-        <td>박윤정</td> <td>여자</td> <td>30</td> <td>50000</td>
+        <td>박윤정</td> <td>여자</td> <td rowspan="2">30</td> <td>50000</td>
       </tr>
       <tr>
-        <td>이후민</td> <td>남자</td> <td>29</td> <td>100000</td>
+        <td>이후민</td> <td>남자</td>  <td>100000</td>
       </tr>
       </tbody>
       <tfoot>
-        <td>합계</td> <td></td> <td></td> <td>150000</td>
+        <td colspan="3">합계</td> <td>150000</td>
       </tfoot>
     </table>
   </body>
