--- a/attr.html
+++ b/attr.html
@@ -6,10 +6,14 @@
     <style type="text/css">
       @import url("attr.css");
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   </head>
   <body>
     <input type="text" value="ELINA">
     <input type="password" value="1234">
     <input class="disabled" type="text" value="disabled text" disabled>
+    <button class="btn-Success">Success</button>
+    <button class="btn-Danger">>Danger</button>
+    <button>Normal</button>
   </body>
 </html>
