--- a/beforeafter.html
+++ b/beforeafter.html
@@ -5,7 +5,7 @@
     <title></title>
     <style type="text/css">
       @import url("beforeafter.css");
-    </style>
+    </style><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   </head>
   <body>
     <div>
