--- a/emmet_after.html
+++ b/emmet_after.html
@@ -5,7 +5,7 @@
     <title></title>
     <style type="text/css">
       @import url("main.css");
-    </style>
+    </style><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   </head>
   <body>
     ul>li*20>a.social
