--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <div class="box"></div>
     <div class="box"></div>
     <ul class="list"></ul>
-    .container>ul.list>li.list-item*10>a{list$}
+    <div class="container">
+      <ul class="list">
+        <li class="list-item"><a href="">list1</a></li>
+        <li class="list-item"><a href="">list2</a></li>
+        <li class="list-item"><a href="">list3</a></li>
+        <li class="list-item"><a href="">list4</a></li>
+        <li class="list-item"><a href="">list5</a></li>
+        <li class="list-item"><a href="">list6</a></li>
+        <li class="list-item"><a href="">list7</a></li>
+        <li class="list-item"><a href="">list8</a></li>
+        <li class="list-item"><a href="">list9</a></li>
+        <li class="list-item"><a href="">list10</a></li>
+      </ul>
+    </div>
   </body>
 </html>
