--- a/index.html
+++ b/index.html
@@ -3,25 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="./css/main.css">
+    <style type="text/css">
+      @import url("main.css");
+    </style>
   </head>
   <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <ul class="list"></ul>
-    <div class="container">
-      <ul class="list">
-        <li class="list-item"><a href="">list1</a></li>
-        <li class="list-item"><a href="">list2</a></li>
-        <li class="list-item"><a href="">list3</a></li>
-        <li class="list-item"><a href="">list4</a></li>
-        <li class="list-item"><a href="">list5</a></li>
-        <li class="list-item"><a href="">list6</a></li>
-        <li class="list-item"><a href="">list7</a></li>
-        <li class="list-item"><a href="">list8</a></li>
-        <li class="list-item"><a href="">list9</a></li>
-        <li class="list-item"><a href="">list10</a></li>
-      </ul>
+      <div class="container">
+    Container
+    <div class="parent">
+      Parent
+      <div class="child">Child1</div>
+      <div class="child">Child2</div>
     </div>
+  </div>
+  <div class="vwvh"></div>
+  <span>text text</span>
+  <div>DIV</div>
   </body>
 </html>
