--- a/display.html
+++ b/display.html
@@ -13,5 +13,7 @@
     <input type="text" value="3">
     <input type="text" value="4">
     <input type="text" value="5">
+    <button>Toggle</button>
+    <div>요소</div>
   </body>
 </html>
