--- a/font.html
+++ b/font.html
@@ -12,5 +12,10 @@
     <div>
       상처를 치료해줄 사람 어디없나 가만히 놔두다간 끊임없이 덧나 사랑도 사람도 너무나도 아파 혼자인게 무서워 난 잊혀질까 두려워
     </div>
+    <div class="serif">안녕 나는 엘리나야</div>
+    <div class="sans-serif">안녕 나는 엘리나야</div>
+    <div class="cursive">안녕 나는 엘리나야</div>
+    <div class="monospace">안녕 나는 엘리나야</div>
+    <box>HELLO 하하하 안녕 나는 엘리나야</box>
   </body>
 </html>
