--- a/float.html
+++ b/float.html
@@ -18,5 +18,25 @@
 <div class="box">2</div>
 <div class="box">3</div>
 <div class="box">4</div>
+<div class="box1">5</div>
+
+
+<div class="clearfix">
+<div class="float-box">1</div>
+<div class="float-box">2</div>
+<div class="float-box">3</div>
+<div class="float-box">4</div>
+  </div>
+<div class="new-box">new</div>
+
+
+<div class="clearfix">
+<div class="float-box">1</div>
+<div class="float-box">2</div>
+<div class="float-box">3</div>
+<div class="float-box">4</div>
+  </div>
+<div class="new-box">new</div>
+
   </body>
 </html>
