CSS reset은 원인이 아니다...

--- a/position.html
+++ b/position.html
@@ -6,6 +6,7 @@
     <style type="text/css">
       @import url("position.css");
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   </head>
   <body>
     <div class="container">
