--- a/position.html
+++ b/position.html
@@ -41,5 +41,13 @@
         <h1>Title 10</h1>
       </div>
     </div>
+
+        <div class="box-group">
+          <div class="box box1">1</div>
+          <div class="box box2">2</div>
+          <div class="box box3">3</div>
+          <div class="box box4">4</div>
+          <div class="box box5">5</div>
+        </div>
   </body>
 </html>
