background local 연습

--- a/background.html
+++ b/background.html
@@ -8,6 +8,9 @@
     </style>
   </head>
   <body>
+    <div class="container">
+      <div class="for-scroll"></div>
+    </div>
     <section class="section1"></section>
     <section class="section2"></section>
     <section class="section3"></section>
