--- a/transition.html
+++ b/transition.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <div class="box">엘리나</div>
+    <img src="https://img.cgv.co.kr/R2014/images/title/h1_cgv.png" alt="cgv">
   </body>
 </html>
