--- a/transition.html
+++ b/transition.html
@@ -7,15 +7,36 @@
       @import url("transition.css");
     </style>
   </head>
-  <body>
-    <div class="box">엘리나</div>
-    <img src="https://img.cgv.co.kr/R2014/images/title/h1_cgv.png" alt="cgv">
-    <div class="perspective">
-  <div class="grandparent">
-    <div class="parent">
-      <img src="https://occ-0-2794-1009.1.nflxso.net/dnm/api/v6/X194eJsgWBDE2aQbaNdmCXGUP-Y/AAAABYWQglOor5M0Dx4dki6SKzkTI0-x1a0m9rBSi6Gw8mPmStUkqivkexzqpjRCZrVOXbsxhzFLA1r4PYx__RFFfQbYBeg.webp?r=f73" alt="DRAMA">
+      <body>
+    <div class="cards">
+
+      <div class="card">
+        <div class="face face-front">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTpZN-4emsukSEOi5yy7B42pZA6aSDBIQYOA&usqp=CAU" alt="babyogu">
+        </div>
+        <div class="face face-back">
+          <img src="https://heropy.blog/css/images/vendor_icons/jest.png" alt="jest">
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="face face-front">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTpZN-4emsukSEOi5yy7B42pZA6aSDBIQYOA&usqp=CAU" alt="babyogu">
+        </div>
+        <div class="face face-back">
+          <img src="https://heropy.blog/css/images/vendor_icons/html5.png" alt="html">
+        </div>
+      </div>
+
+        <div class="card">
+        <div class="face face-front">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTpZN-4emsukSEOi5yy7B42pZA6aSDBIQYOA&usqp=CAU" alt="babyogu">
+        </div>
+        <div class="face face-back">
+          <img src="https://heropy.blog/css/images/vendor_icons/css3.png" alt="css">
+        </div>
+      </div>
+
     </div>
-  </div>
-</div>
   </body>
 </html>
