--- a/grid_3.html
+++ b/grid_3.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <title></title>
     <style type="text/css">
-      @import url("grid_2.css");
+      @import url("grid_3.css");
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="item">HEADER</div>
-      <div class="item">MAIN</div>
-      <div class="item">ASIDE</div>
-      <div class="item">FOOTER</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <div class="item">5</div>
+      <div class="item">6</div>
     </div>
   </body>
 </html>
