[선이름] 정의하기 연습 grid-column: 선이름 / 선이름;

--- a/grid_4.html
+++ b/grid_4.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title></title>
     <style type="text/css">
-      @import url("grid_2.css");
+      @import url("grid_4.css");
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="item">HEADER</div>
-      <div class="item">MAIN</div>
-      <div class="item">ASIDE</div>
-      <div class="item">FOOTER</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
     </div>
   </body>
 </html>
