--- a/grid_6.html
+++ b/grid_6.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
     <div class="item">elina</div>
-    <div class="item">elinaPark is my name. i think that is pretty because this is my real name. kkk i know um.. but i'm ok.</div>
+    <div class="item">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세.</div>
     <div class="item">1</div>
     <div class="item">2</div>
 </div>
